# swagger_output.json
@@ -229,7 +229,7 @@
     "/api/jeniskendaraan/create": {
       "post": {
         "tags": [
-          "JenisKendaraan"
+          "Jenis Kendaraan"
         ],
         "summary": "Create Jenis Kendaraan",
         "description": "",
@@ -287,7 +287,7 @@
     "/api/jeniskendaraan/update/{id}": {
       "put": {
         "tags": [
-          "JenisKendaraan"
+          "Jenis Kendaraan"
         ],
         "summary": "Update Jenis Kendaraan",
         "description": "",
@@ -356,7 +356,7 @@
     "/api/jeniskendaraan/get": {
       "get": {
         "tags": [
-          "JenisKendaraan"
+          "Jenis Kendaraan"
         ],
         "summary": "Get all Jenis Kendaraan",
         "description": "",
@@ -397,7 +397,7 @@
     "/api/jeniskendaraan/delete/{id}": {
       "delete": {
         "tags": [
-          "JenisKendaraan"
+          "Jenis Kendaraan"
         ],
         "summary": "Delete Jenis Kendaraan by ID",
         "description": "",
@@ -446,7 +446,7 @@
     "/api/kriteriapenilaian/create": {
       "post": {
         "tags": [
-          "KriteriaPenilaian"
+          "Kriteria Penilaian"
         ],
         "summary": "Create Kriteria Penilaian",
         "description": "",
@@ -507,7 +507,7 @@
     "/api/kriteriapenilaian/update/{id}": {
       "put": {
         "tags": [
-          "KriteriaPenilaian"
+          "Kriteria Penilaian"
         ],
         "summary": "Update Kriteria Penilaian",
         "description": "",
@@ -579,7 +579,7 @@
     "/api/kriteriapenilaian/get": {
       "get": {
         "tags": [
-          "KriteriaPenilaian"
+          "Kriteria Penilaian"
         ],
         "summary": "Get all Kriteria Penilaian",
         "description": "",
@@ -620,9 +620,232 @@
     "/api/kriteriapenilaian/delete/{id}": {
       "delete": {
         "tags": [
-          "KriteriaPenilaian"
+          "Kriteria Penilaian"
         ],
         "summary": "Delete Kriteria Penilaian by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "origin",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/aturanpenilaian/create": {
+      "post": {
+        "tags": [
+          "Aturan Penilaian"
+        ],
+        "summary": "Create Aturan Penilaian",
+        "description": "",
+        "parameters": [
+          {
+            "name": "origin",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "keterangan": {
+                    "example": "any"
+                  },
+                  "nilai": {
+                    "example": "any"
+                  },
+                  "descnilai": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/aturanpenilaian/update/{id}": {
+      "put": {
+        "tags": [
+          "Aturan Penilaian"
+        ],
+        "summary": "Update Aturan Penilaian",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "origin",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "keterangan": {
+                    "example": "any"
+                  },
+                  "nilai": {
+                    "example": "any"
+                  },
+                  "descnilai": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/aturanpenilaian/get": {
+      "get": {
+        "tags": [
+          "Aturan Penilaian"
+        ],
+        "summary": "Get all Aturan Penilaian",
+        "description": "",
+        "parameters": [
+          {
+            "name": "origin",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/aturanpenilaian/delete/{id}": {
+      "delete": {
+        "tags": [
+          "Aturan Penilaian"
+        ],
+        "summary": "Delete Aturan Penilaian by ID",
         "description": "",
         "parameters": [
           {
